--- a/PoloTic_Java_[C_29]/index.html
+++ b/PoloTic_Java_[C_29]/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
 </head>
+
 <body>
-    <h1>Titulo 1</h1>
-    <h2>Titulo 2</h2>
-    <h3>Titulo 3</h3>
+    <h1 class="titulo1">Titulo 1</h1>
+    <h2 class="titulo2">Titulo 2</h2>
+    <h3 class="titulo3">Titulo 3</h3>
     <h4>Titulo 4</h4>
-    <p><b>Hola!</b> <i>¿Cómo estas?</i> Ya te suscribiste a TodoCode?</p>
+    <p class="parrafo1"><b>Hola!</b> <i>¿Cómo estas?</i> Ya te suscribiste a TodoCode?</p>
     <input type="text">
     <button>Prueba</button>
+    <p id="principal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae necessitatibus porro soluta minima dolor ex unde nihil iure. Iure reprehenderit voluptatibus saepe deleniti ipsa magnam sit aut adipisci atque sapiente.</p>
+    <a href="http://github.com/caidevOficial">My github</a>
 </body>
+
 </html>
